2010-01-12
- the QGraphicsView is not at it's full size right from the beginning so the
    emit resetTilesSignal(graphicsView->sceneRect());
  does not work properly
  FIXED with mainWidget.cpp
    // if the initial screen is bigger (shows white zones) increase
    // this scene rect, could be done dynamically...
    scene->setSceneRect(QRectF(-400,-400,800,800));
- FIXED octave/frequency should be used and stored in settings
- FIXED used QGraphicsItems are not displayed
- FIXED settings are currently not stored correctly
- graphicsview vs view. one of these moves faster and so the view moves out of sight which is bad
  FIXED: the events which previously moved the QGraphicsView now are in absolute coordinates
           (not relatives) so this is no problem anymore
- view should center of 'scene' center
  FIXED: resizeEvent now set's the QGraphicsView to look at x,y=0,0
         there is now a resize issue, since a resize will currently reset the views position
         to 0,0 which is not wanted...

2010-01-11
 - BUG: the graphicsview is smaller than the area it visualizes?!
   how to reproduce:
    - compile last commit (not this one)
    - start the program
    - use the cursor keys, it will be able to move the graphicsView some pixels
   FIXED with: 
   void movableGraphicsView::resizeEvent ( QResizeEvent * event ) {
      setSceneRect(QRect(0, 0, width()-6, height()-6));

2010-01-10
 - removed unused gui controlls in mainWidget.ui
 - moved this project to github.com
 - inital cmake support added